// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReportGenerator - Snapshot Testing > Complex scenarios > should handle different report configurations consistently 1`] = `
{
  "htmlDefault": "<!DOCTYPE html>
<html>
<head>
    <title>User Activity Report</title>
    <style>
        body { font-family: Arial, sans-serif; margin: 20px; }
        .header { background: #f5f5f5; padding: 20px; border-radius: 5px; }
        .summary { display: flex; gap: 20px; margin: 20px 0; }
        .metric { background: #e3f2fd; padding: 15px; border-radius: 5px; text-align: center; }
        table { width: 100%; border-collapse: collapse; margin-top: 20px; }
        th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
        th { background-color: #f2f2f2; }
        .active { color: green; font-weight: bold; }
        .inactive { color: red; }
    </style>
</head>
<body>
    <div class="header">
        <h1>User Activity Report</h1>
        <p>Period: 2024-01-01 to 2024-01-15</p>
    </div>
    
    <div class="summary">
        <div class="metric">
            <h3>4</h3>
            <p>Total Users</p>
        </div>
        <div class="metric">
            <h3>2</h3>
            <p>Active Users</p>
        </div>
        <div class="metric">
            <h3>50%</h3>
            <p>Activity Rate</p>
        </div>
    </div>
    
    <table>
        <thead>
            <tr>
                <th>Name</th>
                <th>Email</th>
                <th>Status</th>
                <th>Login Count</th>
                <th>Account Age (days)</th>
            </tr>
        </thead>
        <tbody>
            
                <tr>
                    <td>Alice Brown</td>
                    <td>alice.brown@example.com</td>
                    <td class="inactive">
                        Inactive
                    </td>
                    <td>0</td>
                    <td>15</td>
                </tr>
            
                <tr>
                    <td>Bob Johnson</td>
                    <td>bob.johnson@example.com</td>
                    <td class="inactive">
                        Inactive
                    </td>
                    <td>5</td>
                    <td>730</td>
                </tr>
            
                <tr>
                    <td>Jane Smith</td>
                    <td>jane.smith@example.com</td>
                    <td class="active">
                        Active
                    </td>
                    <td>75</td>
                    <td>180</td>
                </tr>
            
                <tr>
                    <td>John Doe</td>
                    <td>john.doe@example.com</td>
                    <td class="active">
                        Active
                    </td>
                    <td>25</td>
                    <td>365</td>
                </tr>
            
        </tbody>
    </table>
</body>
</html>",
  "htmlSorted": "<!DOCTYPE html>
<html>
<head>
    <title>User Activity Report</title>
    <style>
        body { font-family: Arial, sans-serif; margin: 20px; }
        .header { background: #f5f5f5; padding: 20px; border-radius: 5px; }
        .summary { display: flex; gap: 20px; margin: 20px 0; }
        .metric { background: #e3f2fd; padding: 15px; border-radius: 5px; text-align: center; }
        table { width: 100%; border-collapse: collapse; margin-top: 20px; }
        th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
        th { background-color: #f2f2f2; }
        .active { color: green; font-weight: bold; }
        .inactive { color: red; }
    </style>
</head>
<body>
    <div class="header">
        <h1>User Activity Report</h1>
        <p>Period: 2024-01-01 to 2024-01-15</p>
    </div>
    
    <div class="summary">
        <div class="metric">
            <h3>4</h3>
            <p>Total Users</p>
        </div>
        <div class="metric">
            <h3>2</h3>
            <p>Active Users</p>
        </div>
        <div class="metric">
            <h3>50%</h3>
            <p>Activity Rate</p>
        </div>
    </div>
    
    <table>
        <thead>
            <tr>
                <th>Name</th>
                <th>Email</th>
                <th>Status</th>
                <th>Login Count</th>
                <th>Account Age (days)</th>
            </tr>
        </thead>
        <tbody>
            
                <tr>
                    <td>Jane Smith</td>
                    <td>jane.smith@example.com</td>
                    <td class="active">
                        Active
                    </td>
                    <td>75</td>
                    <td>180</td>
                </tr>
            
                <tr>
                    <td>John Doe</td>
                    <td>john.doe@example.com</td>
                    <td class="active">
                        Active
                    </td>
                    <td>25</td>
                    <td>365</td>
                </tr>
            
                <tr>
                    <td>Bob Johnson</td>
                    <td>bob.johnson@example.com</td>
                    <td class="inactive">
                        Inactive
                    </td>
                    <td>5</td>
                    <td>730</td>
                </tr>
            
                <tr>
                    <td>Alice Brown</td>
                    <td>alice.brown@example.com</td>
                    <td class="inactive">
                        Inactive
                    </td>
                    <td>0</td>
                    <td>15</td>
                </tr>
            
        </tbody>
    </table>
</body>
</html>",
  "markdownReport": "# User Activity Report

## Summary
- **Period:** 2024-01-01 to 2024-01-15
- **Total Users:** 4
- **Active Users:** 2
- **Inactive Users:** 2
- **Activity Rate:** 50%

## User Details

| Name | Email | Status | Login Count | Account Age |
|------|-------|--------|-------------|-------------|
| Alice Brown | alice.brown@example.com | ❌ Inactive | 0 | 15 days |
| Bob Johnson | bob.johnson@example.com | ❌ Inactive | 5 | 730 days |
| Jane Smith | jane.smith@example.com | ✅ Active | 75 | 180 days |
| John Doe | john.doe@example.com | ✅ Active | 25 | 365 days |",
}
`;

exports[`ReportGenerator - Snapshot Testing > Complex scenarios > should maintain consistent formatting across different data sets 1`] = `
{
  "large": {
    "metrics": {
      "activeUsers": 2,
      "activityRate": 50,
      "averageAccountAge": 323,
      "averageLoginCount": 26.25,
      "inactiveUsers": 2,
      "totalUsers": 4,
    },
    "period": {
      "durationDays": 15,
      "from": "2024-01-01",
      "to": "2024-01-15",
    },
    "recentUsers": [
      {
        "accountAge": 15,
        "isActive": false,
        "name": "Alice Brown",
      },
    ],
    "reportDate": "2024-01-15T12:00:00.000Z",
    "usersByActivity": {
      "highActivity": 6,
      "lowActivity": 2,
      "mediumActivity": 2,
    },
  },
  "small": {
    "metrics": {
      "activeUsers": 1,
      "activityRate": 100,
      "averageAccountAge": 365,
      "averageLoginCount": 25,
      "inactiveUsers": 0,
      "totalUsers": 1,
    },
    "period": {
      "durationDays": 7,
      "from": "2024-01-01",
      "to": "2024-01-07",
    },
    "recentUsers": [],
    "reportDate": "2024-01-15T12:00:00.000Z",
    "usersByActivity": {
      "highActivity": 0,
      "lowActivity": 0,
      "mediumActivity": 1,
    },
  },
}
`;

exports[`ReportGenerator - Snapshot Testing > Regression tests > should handle special characters in user data 1`] = `
{
  "html": "<!DOCTYPE html>
<html>
<head>
    <title>User Activity Report</title>
    <style>
        body { font-family: Arial, sans-serif; margin: 20px; }
        .header { background: #f5f5f5; padding: 20px; border-radius: 5px; }
        .summary { display: flex; gap: 20px; margin: 20px 0; }
        .metric { background: #e3f2fd; padding: 15px; border-radius: 5px; text-align: center; }
        table { width: 100%; border-collapse: collapse; margin-top: 20px; }
        th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
        th { background-color: #f2f2f2; }
        .active { color: green; font-weight: bold; }
        .inactive { color: red; }
    </style>
</head>
<body>
    <div class="header">
        <h1>User Activity Report</h1>
        <p>Period: 2024-01-01 to 2024-01-15</p>
    </div>
    
    <div class="summary">
        <div class="metric">
            <h3>4</h3>
            <p>Total Users</p>
        </div>
        <div class="metric">
            <h3>2</h3>
            <p>Active Users</p>
        </div>
        <div class="metric">
            <h3>50%</h3>
            <p>Activity Rate</p>
        </div>
    </div>
    
    <table>
        <thead>
            <tr>
                <th>Name</th>
                <th>Email</th>
                <th>Status</th>
                <th>Login Count</th>
                <th>Account Age (days)</th>
            </tr>
        </thead>
        <tbody>
            
                <tr>
                    <td>José María O'Connor</td>
                    <td>josé.maría@examplé.com</td>
                    <td class="active">
                        Active
                    </td>
                    <td>42</td>
                    <td>100</td>
                </tr>
            
        </tbody>
    </table>
</body>
</html>",
  "json": {
    "generatedAt": "2024-01-15T12:00:00.000Z",
    "period": {
      "endDate": "2024-01-15T23:59:59.000Z",
      "startDate": "2024-01-01T00:00:00.000Z",
    },
    "summary": {
      "activeUsers": 2,
      "averageAccountAge": 322.5,
      "averageLoginCount": 26.25,
      "inactiveUsers": 2,
      "totalUsers": 4,
    },
    "title": "User Activity Report",
    "users": [
      {
        "accountAge": 100,
        "email": "josé.maría@examplé.com",
        "id": "special-user",
        "isActive": true,
        "lastLoginAt": "2024-01-10T14:30:00.000Z",
        "loginCount": 42,
        "name": "José María O'Connor",
      },
    ],
  },
}
`;

exports[`ReportGenerator - Snapshot Testing > Regression tests > should maintain backwards compatibility for dashboard structure 1`] = `
{
  "metrics": {
    "activeUsers": 2,
    "activityRate": 50,
    "averageAccountAge": 323,
    "averageLoginCount": 26.25,
    "inactiveUsers": 2,
    "totalUsers": 4,
  },
  "period": {
    "durationDays": 15,
    "from": "2024-01-01",
    "to": "2024-01-15",
  },
  "recentUsers": [
    {
      "accountAge": 15,
      "isActive": false,
      "name": "Alice Brown",
    },
  ],
  "reportDate": "2024-01-15T12:00:00.000Z",
  "usersByActivity": {
    "highActivity": 1,
    "lowActivity": 2,
    "mediumActivity": 1,
  },
}
`;

exports[`ReportGenerator - Snapshot Testing > generateDashboardSummary > should generate dashboard summary object 1`] = `
{
  "metrics": {
    "activeUsers": 2,
    "activityRate": 50,
    "averageAccountAge": 323,
    "averageLoginCount": 26.25,
    "inactiveUsers": 2,
    "totalUsers": 4,
  },
  "period": {
    "durationDays": 15,
    "from": "2024-01-01",
    "to": "2024-01-15",
  },
  "recentUsers": [
    {
      "accountAge": 15,
      "isActive": false,
      "name": "Alice Brown",
    },
  ],
  "reportDate": "2024-01-15T12:00:00.000Z",
  "usersByActivity": {
    "highActivity": 1,
    "lowActivity": 2,
    "mediumActivity": 1,
  },
}
`;

exports[`ReportGenerator - Snapshot Testing > generateDashboardSummary > should handle edge case with all inactive users 1`] = `
{
  "metrics": {
    "activeUsers": 0,
    "activityRate": 0,
    "averageAccountAge": 323,
    "averageLoginCount": 26.25,
    "inactiveUsers": 4,
    "totalUsers": 4,
  },
  "period": {
    "durationDays": 15,
    "from": "2024-01-01",
    "to": "2024-01-15",
  },
  "recentUsers": [
    {
      "accountAge": 15,
      "isActive": false,
      "name": "Alice Brown",
    },
  ],
  "reportDate": "2024-01-15T12:00:00.000Z",
  "usersByActivity": {
    "highActivity": 1,
    "lowActivity": 2,
    "mediumActivity": 1,
  },
}
`;

exports[`ReportGenerator - Snapshot Testing > generateDashboardSummary > should handle edge case with no users 1`] = `
{
  "metrics": {
    "activeUsers": 0,
    "activityRate": 0,
    "averageAccountAge": 0,
    "averageLoginCount": 0,
    "inactiveUsers": 0,
    "totalUsers": 0,
  },
  "period": {
    "durationDays": 15,
    "from": "2024-01-01",
    "to": "2024-01-15",
  },
  "recentUsers": [],
  "reportDate": "2024-01-15T12:00:00.000Z",
  "usersByActivity": {
    "highActivity": 0,
    "lowActivity": 0,
    "mediumActivity": 0,
  },
}
`;

exports[`ReportGenerator - Snapshot Testing > generateUserActivityReport > should generate HTML report excluding inactive users 1`] = `
"<!DOCTYPE html>
<html>
<head>
    <title>User Activity Report</title>
    <style>
        body { font-family: Arial, sans-serif; margin: 20px; }
        .header { background: #f5f5f5; padding: 20px; border-radius: 5px; }
        .summary { display: flex; gap: 20px; margin: 20px 0; }
        .metric { background: #e3f2fd; padding: 15px; border-radius: 5px; text-align: center; }
        table { width: 100%; border-collapse: collapse; margin-top: 20px; }
        th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
        th { background-color: #f2f2f2; }
        .active { color: green; font-weight: bold; }
        .inactive { color: red; }
    </style>
</head>
<body>
    <div class="header">
        <h1>User Activity Report</h1>
        <p>Period: 2024-01-01 to 2024-01-15</p>
    </div>
    
    <div class="summary">
        <div class="metric">
            <h3>4</h3>
            <p>Total Users</p>
        </div>
        <div class="metric">
            <h3>2</h3>
            <p>Active Users</p>
        </div>
        <div class="metric">
            <h3>50%</h3>
            <p>Activity Rate</p>
        </div>
    </div>
    
    <table>
        <thead>
            <tr>
                <th>Name</th>
                <th>Email</th>
                <th>Status</th>
                <th>Login Count</th>
                <th>Account Age (days)</th>
            </tr>
        </thead>
        <tbody>
            
                <tr>
                    <td>Jane Smith</td>
                    <td>jane.smith@example.com</td>
                    <td class="active">
                        Active
                    </td>
                    <td>75</td>
                    <td>180</td>
                </tr>
            
                <tr>
                    <td>John Doe</td>
                    <td>john.doe@example.com</td>
                    <td class="active">
                        Active
                    </td>
                    <td>25</td>
                    <td>365</td>
                </tr>
            
        </tbody>
    </table>
</body>
</html>"
`;

exports[`ReportGenerator - Snapshot Testing > generateUserActivityReport > should generate HTML report sorted by login count descending 1`] = `
"<!DOCTYPE html>
<html>
<head>
    <title>User Activity Report</title>
    <style>
        body { font-family: Arial, sans-serif; margin: 20px; }
        .header { background: #f5f5f5; padding: 20px; border-radius: 5px; }
        .summary { display: flex; gap: 20px; margin: 20px 0; }
        .metric { background: #e3f2fd; padding: 15px; border-radius: 5px; text-align: center; }
        table { width: 100%; border-collapse: collapse; margin-top: 20px; }
        th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
        th { background-color: #f2f2f2; }
        .active { color: green; font-weight: bold; }
        .inactive { color: red; }
    </style>
</head>
<body>
    <div class="header">
        <h1>User Activity Report</h1>
        <p>Period: 2024-01-01 to 2024-01-15</p>
    </div>
    
    <div class="summary">
        <div class="metric">
            <h3>4</h3>
            <p>Total Users</p>
        </div>
        <div class="metric">
            <h3>2</h3>
            <p>Active Users</p>
        </div>
        <div class="metric">
            <h3>50%</h3>
            <p>Activity Rate</p>
        </div>
    </div>
    
    <table>
        <thead>
            <tr>
                <th>Name</th>
                <th>Email</th>
                <th>Status</th>
                <th>Login Count</th>
                <th>Account Age (days)</th>
            </tr>
        </thead>
        <tbody>
            
                <tr>
                    <td>Jane Smith</td>
                    <td>jane.smith@example.com</td>
                    <td class="active">
                        Active
                    </td>
                    <td>75</td>
                    <td>180</td>
                </tr>
            
                <tr>
                    <td>John Doe</td>
                    <td>john.doe@example.com</td>
                    <td class="active">
                        Active
                    </td>
                    <td>25</td>
                    <td>365</td>
                </tr>
            
                <tr>
                    <td>Bob Johnson</td>
                    <td>bob.johnson@example.com</td>
                    <td class="inactive">
                        Inactive
                    </td>
                    <td>5</td>
                    <td>730</td>
                </tr>
            
                <tr>
                    <td>Alice Brown</td>
                    <td>alice.brown@example.com</td>
                    <td class="inactive">
                        Inactive
                    </td>
                    <td>0</td>
                    <td>15</td>
                </tr>
            
        </tbody>
    </table>
</body>
</html>"
`;

exports[`ReportGenerator - Snapshot Testing > generateUserActivityReport > should generate HTML report with custom title 1`] = `
"<!DOCTYPE html>
<html>
<head>
    <title>Custom Monthly Report</title>
    <style>
        body { font-family: Arial, sans-serif; margin: 20px; }
        .header { background: #f5f5f5; padding: 20px; border-radius: 5px; }
        .summary { display: flex; gap: 20px; margin: 20px 0; }
        .metric { background: #e3f2fd; padding: 15px; border-radius: 5px; text-align: center; }
        table { width: 100%; border-collapse: collapse; margin-top: 20px; }
        th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
        th { background-color: #f2f2f2; }
        .active { color: green; font-weight: bold; }
        .inactive { color: red; }
    </style>
</head>
<body>
    <div class="header">
        <h1>Custom Monthly Report</h1>
        <p>Period: 2024-01-01 to 2024-01-15</p>
    </div>
    
    <div class="summary">
        <div class="metric">
            <h3>4</h3>
            <p>Total Users</p>
        </div>
        <div class="metric">
            <h3>2</h3>
            <p>Active Users</p>
        </div>
        <div class="metric">
            <h3>50%</h3>
            <p>Activity Rate</p>
        </div>
    </div>
    
    <table>
        <thead>
            <tr>
                <th>Name</th>
                <th>Email</th>
                <th>Status</th>
                <th>Login Count</th>
                <th>Account Age (days)</th>
            </tr>
        </thead>
        <tbody>
            
                <tr>
                    <td>Alice Brown</td>
                    <td>alice.brown@example.com</td>
                    <td class="inactive">
                        Inactive
                    </td>
                    <td>0</td>
                    <td>15</td>
                </tr>
            
                <tr>
                    <td>Bob Johnson</td>
                    <td>bob.johnson@example.com</td>
                    <td class="inactive">
                        Inactive
                    </td>
                    <td>5</td>
                    <td>730</td>
                </tr>
            
                <tr>
                    <td>Jane Smith</td>
                    <td>jane.smith@example.com</td>
                    <td class="active">
                        Active
                    </td>
                    <td>75</td>
                    <td>180</td>
                </tr>
            
                <tr>
                    <td>John Doe</td>
                    <td>john.doe@example.com</td>
                    <td class="active">
                        Active
                    </td>
                    <td>25</td>
                    <td>365</td>
                </tr>
            
        </tbody>
    </table>
</body>
</html>"
`;

exports[`ReportGenerator - Snapshot Testing > generateUserActivityReport > should generate HTML report with default config 1`] = `
"<!DOCTYPE html>
<html>
<head>
    <title>User Activity Report</title>
    <style>
        body { font-family: Arial, sans-serif; margin: 20px; }
        .header { background: #f5f5f5; padding: 20px; border-radius: 5px; }
        .summary { display: flex; gap: 20px; margin: 20px 0; }
        .metric { background: #e3f2fd; padding: 15px; border-radius: 5px; text-align: center; }
        table { width: 100%; border-collapse: collapse; margin-top: 20px; }
        th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
        th { background-color: #f2f2f2; }
        .active { color: green; font-weight: bold; }
        .inactive { color: red; }
    </style>
</head>
<body>
    <div class="header">
        <h1>User Activity Report</h1>
        <p>Period: 2024-01-01 to 2024-01-15</p>
    </div>
    
    <div class="summary">
        <div class="metric">
            <h3>4</h3>
            <p>Total Users</p>
        </div>
        <div class="metric">
            <h3>2</h3>
            <p>Active Users</p>
        </div>
        <div class="metric">
            <h3>50%</h3>
            <p>Activity Rate</p>
        </div>
    </div>
    
    <table>
        <thead>
            <tr>
                <th>Name</th>
                <th>Email</th>
                <th>Status</th>
                <th>Login Count</th>
                <th>Account Age (days)</th>
            </tr>
        </thead>
        <tbody>
            
                <tr>
                    <td>Alice Brown</td>
                    <td>alice.brown@example.com</td>
                    <td class="inactive">
                        Inactive
                    </td>
                    <td>0</td>
                    <td>15</td>
                </tr>
            
                <tr>
                    <td>Bob Johnson</td>
                    <td>bob.johnson@example.com</td>
                    <td class="inactive">
                        Inactive
                    </td>
                    <td>5</td>
                    <td>730</td>
                </tr>
            
                <tr>
                    <td>Jane Smith</td>
                    <td>jane.smith@example.com</td>
                    <td class="active">
                        Active
                    </td>
                    <td>75</td>
                    <td>180</td>
                </tr>
            
                <tr>
                    <td>John Doe</td>
                    <td>john.doe@example.com</td>
                    <td class="active">
                        Active
                    </td>
                    <td>25</td>
                    <td>365</td>
                </tr>
            
        </tbody>
    </table>
</body>
</html>"
`;

exports[`ReportGenerator - Snapshot Testing > generateUserActivityReport > should generate JSON report 1`] = `
{
  "generatedAt": "2024-01-15T12:00:00.000Z",
  "period": {
    "endDate": "2024-01-15T23:59:59.000Z",
    "startDate": "2024-01-01T00:00:00.000Z",
  },
  "summary": {
    "activeUsers": 2,
    "averageAccountAge": 322.5,
    "averageLoginCount": 26.25,
    "inactiveUsers": 2,
    "totalUsers": 4,
  },
  "title": "User Activity Report",
  "users": [
    {
      "accountAge": 15,
      "email": "alice.brown@example.com",
      "id": "user-4",
      "isActive": false,
      "loginCount": 0,
      "name": "Alice Brown",
    },
    {
      "accountAge": 730,
      "email": "bob.johnson@example.com",
      "id": "user-3",
      "isActive": false,
      "lastLoginAt": "2023-12-01T16:45:00.000Z",
      "loginCount": 5,
      "name": "Bob Johnson",
    },
    {
      "accountAge": 180,
      "email": "jane.smith@example.com",
      "id": "user-2",
      "isActive": true,
      "lastLoginAt": "2024-01-14T09:15:00.000Z",
      "loginCount": 75,
      "name": "Jane Smith",
    },
    {
      "accountAge": 365,
      "email": "john.doe@example.com",
      "id": "user-1",
      "isActive": true,
      "lastLoginAt": "2024-01-10T14:30:00.000Z",
      "loginCount": 25,
      "name": "John Doe",
    },
  ],
}
`;

exports[`ReportGenerator - Snapshot Testing > generateUserActivityReport > should generate Markdown report 1`] = `
"# User Activity Summary

## Summary
- **Period:** 2024-01-01 to 2024-01-15
- **Total Users:** 4
- **Active Users:** 2
- **Inactive Users:** 2
- **Activity Rate:** 50%

## User Details

| Name | Email | Status | Login Count | Account Age |
|------|-------|--------|-------------|-------------|
| Alice Brown | alice.brown@example.com | ❌ Inactive | 0 | 15 days |
| Bob Johnson | bob.johnson@example.com | ❌ Inactive | 5 | 730 days |
| Jane Smith | jane.smith@example.com | ✅ Active | 75 | 180 days |
| John Doe | john.doe@example.com | ✅ Active | 25 | 365 days |"
`;

exports[`ReportGenerator - Snapshot Testing > generateUserProfileCard > should generate profile card for active user 1`] = `
{
  "account": {
    "ageCategory": "Established",
    "ageInDays": 365,
    "engagementLevel": "Lightly Engaged",
  },
  "activity": {
    "lastLogin": {
      "date": "2024-01-10",
      "daysAgo": 5,
    },
    "loginCount": 25,
    "status": "Active",
  },
  "profile": {
    "email": "john.doe@example.com",
    "id": "user-1",
    "name": "John Doe",
  },
}
`;

exports[`ReportGenerator - Snapshot Testing > generateUserProfileCard > should generate profile card for highly engaged user 1`] = `
{
  "account": {
    "ageCategory": "Veteran",
    "ageInDays": 1000,
    "engagementLevel": "Highly Engaged",
  },
  "activity": {
    "lastLogin": {
      "date": "2024-01-15",
      "daysAgo": 1,
    },
    "loginCount": 150,
    "status": "Active",
  },
  "profile": {
    "email": "super@example.com",
    "id": "super-user",
    "name": "Super User",
  },
}
`;

exports[`ReportGenerator - Snapshot Testing > generateUserProfileCard > should generate profile card for inactive user 1`] = `
{
  "account": {
    "ageCategory": "Veteran",
    "ageInDays": 730,
    "engagementLevel": "Dormant",
  },
  "activity": {
    "lastLogin": {
      "date": "2023-12-01",
      "daysAgo": 45,
    },
    "loginCount": 5,
    "status": "Inactive",
  },
  "profile": {
    "email": "bob.johnson@example.com",
    "id": "user-3",
    "name": "Bob Johnson",
  },
}
`;

exports[`ReportGenerator - Snapshot Testing > generateUserProfileCard > should generate profile card for user who never logged in 1`] = `
{
  "account": {
    "ageCategory": "New",
    "ageInDays": 15,
    "engagementLevel": "Dormant",
  },
  "activity": {
    "lastLogin": null,
    "loginCount": 0,
    "status": "Inactive",
  },
  "profile": {
    "email": "alice.brown@example.com",
    "id": "user-4",
    "name": "Alice Brown",
  },
}
`;
